--- a/templates/htmlInputTemplate.hbs
+++ b/templates/htmlInputTemplate.hbs
@@ -1,10 +1,6 @@
 <form class="flexcol"></form>
-    <div>
-        <strong>Edit results</strong>
-    </div>
-
     <div class="form-group stacked">
-        <label class="form-label" for="value">Results for range {{{result.rangeText}}}</label><br/>
+        <label class="form-label" for="value">Edit results for range {{{range}}}</label><br/>
         <p>
         {{
             editor result.text
@@ -16,7 +12,4 @@
         }}
         </p>
     </div>
-    <footer class="form-footer">
-        <input type="submit" value="Save" />
-    </footer>
 </form>
